[ADD] mapper 생성 및 연결

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,5 +6,12 @@
 </head>
 <body>
   <p>안녕</p>
+  <table class="top">
+    <tr>
+      <td>
+        <a href="/market">마켓으로 이동</a>
+      </td>
+    </tr>
+  </table>
 </body>
 </html>
